Fix the restoring of the state of the columns (visibility and width)

- Do not dump binary data into KConfig

BUG: 190230
BUG: 190838

svn path=/trunk/KDE/kdepim/libkdepim/; revision=967209